--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "dompurify": "^2.0.8",
-    "marked": "^0.8.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
+    "dompurify": "2.3.1",
+    "marked": "3.0.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-redux": "7.2.4",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.5",
+    "redux": "4.1.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
