updated homepage path for package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "md-preview",
-  "version": "0.1.0",
+  "version": "1.2",
   "private": true,
-  "homepage": "http://mdle.femtearenan.se",
+  "homepage": "https://mdle.andersbjorkland.online",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
