--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,4 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
+RewriteEngine On
 
-    RewriteCond %{HTTPS} !=on
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-</IfModule>
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://mdle.andersbjorkland.online/$1 [R,L]
